# ghc-rust

./: .gitignore  .rustfmt.toml  Cargo.toml  deny.toml  flake.nix  justfile  rust-toolchain.toml  taplo.toml  treefmt.toml
generate/: Cargo.toml  build.rs
generate/consumers/: Cargo.toml
generate/consumers/src/: consumer.rs  lib.rs
generate/ffi/: Cargo.toml  build.rs
generate/ffi/src/: consts.rs  enums.rs  fields.rs  fns.rs  lib.rs  main.rs  symbols.rs  tests.rs
generate/format/: Cargo.toml
generate/format/src/: lib.rs  main.rs
generate/headers/: Cargo.toml
generate/headers/src/: main.rs
generate/refactor/: Cargo.toml
generate/refactor/src/: lib.rs  used_idents.rs
generate/src/: lib.rs  main.rs  place.rs  symbols.rs  tests.rs
generate/symbol-consumers/: Cargo.toml
generate/symbol-consumers/src/: main.rs
generate/symbols/: Cargo.toml
generate/symbols/src/: lib.rs
rts/: Cargo.toml  build.rs
rts-sys/: Cargo.toml  build.rs
rts-sys/src/: lib.rs
rts/src/: adjustor.rs  alloc_array.rs  arena.rs  builtin_closures.rs  capability.rs  check_unload.rs  check_vector_support.rs  clone_stack.rs  closure_flags.rs  closure_size.rs  config.rs  continuation.rs  disassembler.rs  event_log.rs  event_log_constants.rs  event_types.rs  eventlog.rs  exec_page.rs  ffi.rs  ffitarget.rs  file_lock.rs  foreign_exports.rs  fs.rs  ghcautoconf.rs  ghcplatform.rs  globals.rs  hash.rs  heap.rs  hpc.rs  hs_ffi.rs  interpreter.rs  io_manager.rs  ipe.rs  ldv_profile.rs  lib.rs  libdw.rs  libdw_pool.rs  linker.rs  mach_deps.rs  messages.rs  (+50 more)
rts/src/adjustor/: adjustor_pool.rs  libffi_adjustor.rs  native_amd64_mingw.rs
rts/src/adjustor/libffi_adjustor/: tests.rs
rts/src/adjustor/native_amd64_mingw/: tests.rs
rts/src/builtin_closures/: tests.rs
rts/src/capability/: tests.rs
rts/src/config/: tests.rs
rts/src/event_log/: format.rs  tests.rs  types.rs  writer.rs
rts/src/event_log/writer/: tests.rs
rts/src/eventlog/: event_log.rs  event_log_writer.rs
rts/src/exec_page/: tests.rs
rts/src/ffi/: hs_ffi.rs  mach_deps.rs  rts.rs  rts_api.rs  stg.rs
rts/src/ffi/hs_ffi/: tests.rs
rts/src/ffi/mach_deps/: tests.rs
rts/src/ffi/rts/: adjustor.rs  block_signals.rs  config.rs  constants.rs  event_log_writer.rs  exec_page.rs  file_lock.rs  flags.rs  foreign_exports.rs  get_time.rs  globals.rs  hpc.rs  io_interface.rs  ipe.rs  libdw.rs  libdw_pool.rs  linker.rs  main.rs  messages.rs  non_moving.rs  os_threads.rs  parallel.rs  prim_float.rs  profiling.rs  rts_to_hs_iface.rs  signals.rs  spin_lock.rs  stable_name.rs  stable_ptr.rs  static_ptr_table.rs  tests.rs  threads.rs  ticky.rs  time.rs  timer.rs  tsan_utils.rs  tty.rs  utils.rs
rts/src/ffi/rts_api/: tests.rs
rts/src/ffi/stg/: mach_regs_for_host.rs  misc_closures.rs  prim.rs  regs.rs  smp.rs  tests.rs  ticky.rs  types.rs
rts/src/file_lock/: tests.rs
rts/src/foreign_exports/: tests.rs
rts/src/globals/: tests.rs
rts/src/hash/: tests.rs
rts/src/heap/: tests.rs
rts/src/hooks/: flag_defaults.rs  long_gc_sync.rs  malloc_fail.rs  on_exit.rs  out_of_heap.rs  stack_overflow.rs
rts/src/hpc/: tests.rs
rts/src/hs_ffi/: tests.rs
rts/src/io_manager/: tests.rs
rts/src/ipe/: tests.rs
rts/src/libdw/: tests.rs
rts/src/libdw_pool/: tests.rs
rts/src/linker/: cache_flush.rs  init_fini.rs  load_archive.rs  load_native_obj_posix.rs  m32_alloc.rs  m_map.rs  mach_o.rs  macho.rs  proddable_blocks.rs  symbol_extras.rs  tests.rs
rts/src/linker/load_archive/: tests.rs
rts/src/linker/macho/: plt.rs  plt_aarch64.rs
rts/src/mach_deps/: tests.rs
rts/src/os/: threads.rs
rts/src/posix/: get_env.rs  get_time.rs  os_mem.rs  os_threads.rs  select.rs  signals.rs  ticker.rs  tty.rs
rts/src/posix/get_time/: tests.rs
rts/src/posix/os_threads/: tests.rs
rts/src/posix/signals/: tests.rs
rts/src/posix/tty/: tests.rs
rts/src/prim/: atomic.rs  bitrev.rs  bswap.rs  clz.rs  ctz.rs  mul_int_may_oflo.rs  pdep.rs  pext.rs  popcnt.rs  word2float.rs
rts/src/prim/atomic/: tests.rs
rts/src/prim/bitrev/: tests.rs
rts/src/prim/bswap/: tests.rs
rts/src/prim/clz/: tests.rs
rts/src/prim/ctz/: tests.rs
rts/src/prim/mul_int_may_oflo/: tests.rs
rts/src/prim/pdep/: tests.rs
rts/src/prof_heap/: tests.rs
rts/src/profiling/: tests.rs
rts/src/proftimer/: tests.rs
rts/src/rts/: adjustor.rs  block_signals.rs  capability.rs  config.rs  constants.rs  event_log_writer.rs  exec_page.rs  file_lock.rs  flags.rs  foreign_exports.rs  get_time.rs  globals.rs  hpc.rs  io_interface.rs  ipe.rs  libdw.rs  libdw_pool.rs  linker.rs  main.rs  messages.rs  non_moving.rs  os_threads.rs  parallel.rs  prim_float.rs  prof.rs  profiling.rs  signals.rs  stable_name.rs  stable_ptr.rs  static_ptr_table.rs  storage.rs  task.rs  tests.rs  threads.rs  ticky.rs  time.rs  timer.rs  tsan_utils.rs  tty.rs  utils.rs
rts/src/rts_api/: tests.rs
rts/src/rts_flags/: tests.rs
rts/src/rts_messages/: tests.rs
rts/src/rts_startup/: tests.rs
rts/src/rts_utils/: tests.rs
rts/src/schedule/: tests.rs
rts/src/sm/: block_alloc.rs  cnf.rs  compact.rs  evac.rs  gc.rs  gc_aux.rs  gc_utils.rs  m_block.rs  mark_weak.rs  non_moving.rs  non_moving_allocate.rs  non_moving_census.rs  non_moving_mark.rs  non_moving_scav.rs  non_moving_shortcut.rs  non_moving_sweep.rs  sanity.rs  scav.rs  storage.rs  sweep.rs
rts/src/sparks/: tests.rs
rts/src/spin_lock/: tests.rs
rts/src/static_ptr_table/: tests.rs
rts/src/stats/: tests.rs
rts/src/stg/: dll.rs  mach_regs_for_host.rs  misc_closures.rs  prim.rs  regs.rs  smp.rs  tests.rs  ticky.rs  types.rs
rts/src/stg_prim_float/: tests.rs
rts/src/task/: tests.rs
rts/src/testsuite/: ipe_event_log.rs  ipe_event_log_from_map.rs  ipe_lib.rs  ipe_map.rs  testmblockalloc.rs  testwsdeque.rs
rts/src/threads/: tests.rs
rts/src/ticky/: tests.rs
rts/src/time/: tests.rs
rts/src/timer/: tests.rs
rts/src/utils/: macros.rs  str.rs  sync.rs  test.rs
rts/src/win32/: async_mio.rs  async_win_io.rs  console_handler.rs  get_env.rs  get_time.rs  os_mem.rs  os_threads.rs  thr_io_manager.rs  ticker.rs  veh_excn.rs  work_queue.rs
(+311 files in other folders)
