[workspace]
members = [
  "build-utils",
  "generate/consumers",
  "generate/ffi",
  "generate/symbol-consumers",
  "generate/symbols",
  "include",
  "macros",
  "rts",
  "rts-sys",
]
default-members = ["rts"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"

[workspace.metadata]
crane.name = "ghc-rts"

[workspace.dependencies]
bindgen = "0.72.0"
build-utils = { path = "build-utils" }
generate-consumers = { path = "generate/consumers" }
generate-symbols = { path = "generate/symbols" }
libc = "0.2.171"
proc-macro2 = "1.0.93"
quote = "1.0.38"
regex = "1.12.2"
syn = { version = "2.0.98", features = ["extra-traits", "visit"] }
tracing = "0.1.41"
