[workspace]
members = [
  "build-utils",
  "generate/consumers",
  "generate/ffi",
  "generate/format",
  "generate/headers",
  "generate/refactor",
  "generate/symbol-consumers",
  "generate/symbols",
  "macros",
  "rts",
  "rts-sys",
]
default-members = ["rts"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"

[workspace.metadata]
crane.name = "ghc-rts"

[workspace.dependencies]
bindgen = "0.72.0"
build-utils = { path = "build-utils" }
cbindgen = { version = "0.29.2", default-features = false }
generate-consumers = { path = "generate/consumers" }
generate-ffi = { path = "generate/ffi" }
generate-format = { path = "generate/format" }
generate-symbols = { path = "generate/symbols" }
libc = "0.2.171"
prettyplease = "0.2.29"
proc-macro2 = "1.0.93"
quote = "1.0.38"
regex = "1.12.2"
stringcase = "0.4.0"
syn = { version = "2.0.98", features = ["extra-traits", "visit", "visit-mut"] }
tracing = "0.1.41"
