[package]
name = "generate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

build = "build.rs"

[build-dependencies]
bindgen.workspace = true
bindgen-utils.workspace = true
stringcase = "0.3.0"

[dependencies]
prettyplease = "0.2.29"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["extra-traits"] }
