[package]
name = "ghc-rts-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[build-dependencies]
bindgen.workspace = true
build-utils.workspace = true

[dependencies]
libc.workspace = true

[features]
way_debug = []
way_profiling = []
way_threaded = []
