[package]
name = "ghc-rts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"
license-file = "LICENSE"

# [lib]
# crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["sys"]
sys = ["dep:ghc-rts-sys"]
tracing = ["dep:tracing", "ghc-macros/tracing"]

[build-dependencies]
build-utils.workspace = true

[dependencies]
ghc-macros = { path = "../macros" }
ghc-rts-sys = { path = "../rts-sys", optional = true }
libc.workspace = true
quickcheck_macros = "1.0.0"
tracing = { workspace = true, optional = true }

[dev-dependencies]
quickcheck = "1.0.3"
