[package]
name = "ghc-rts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"
license-file = "LICENSE"

# [lib]
# crate-type = ["lib", "staticlib", "cdylib"]

[features]
default = ["sys", "way_debug", "way_profiling", "way_threaded"]
header = []
loom = ["dep:loom"]
sys = ["dep:ghc-rts-sys"]
tracing = ["dep:tracing", "ghc-macros/tracing"]
way_debug = ["ghc-rts-sys/way_debug"]
way_profiling = ["ghc-rts-sys/way_profiling"]
way_threaded = ["ghc-rts-sys/way_threaded"]

[build-dependencies]
build-utils.workspace = true

[dependencies]
errno = "0.3.14"
ghc-macros = { path = "../macros" }
ghc-rts-sys = { path = "../rts-sys", optional = true }
libc.workspace = true
loom = { version = "0.7.2", optional = true }
printf-compat = "0.4.0"
quickcheck_macros = "1.0.0"
tracing = { workspace = true, optional = true }

[dev-dependencies]
quickcheck = "1.0.3"
