[package]
name = "generate-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

build = "build.rs"

[build-dependencies]
bindgen.workspace = true
build-utils.workspace = true
stringcase = "0.4.0"

[dependencies]
prettyplease = "0.2.29"
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
