[package]
name = "generate-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

build = "build.rs"

[build-dependencies]
bindgen.workspace = true
build-utils.workspace = true
stringcase.workspace = true

[dependencies]
generate-consumers.workspace = true
generate-format.workspace = true
generate-symbols.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
