[package]
name = "generate-symbol-consumers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bindgen.workspace = true
build-utils.workspace = true
generate-consumers.workspace = true
proc-macro2.workspace = true
regex.workspace = true
syn.workspace = true
